kubernetes/crispy-octo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crispy-octo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: crispy-octo-app
  template:
    metadata:
      labels:
        app: crispy-octo-app
    spec:
      containers:
      - name: crispy-octo-app
        image: tarik45/crispy-octo-app:latest
        ports:
        - containerPort: 3000
