kubernetes/deploymentworker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crispy-octo-deployment-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crispy-octo-worker
  template:
    metadata:
      labels:
        app: crispy-octo-worker
    spec:
      containers:
        - name: crispy-octo-worker
          image: delvlooping/crispy-octo:prod
          resources:
            requests:
              cpu: 100m
              memory: 500M
            limits:
              cpu: 100m
              memory: 500M
          command: ["bundle", "exec", "rake", "environment", "resque:work", "QUEUE=*"]
      volumes:
        - name: crispy-octo-config
          configMap:
            name: crispy-octo-configmap
