kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crispy-octo-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crispy-octo-redis
  template:
    metadata:
      labels:
        app: crispy-octo-redis
    spec:
      containers:
        - name: crispy-octo-redis
          image: redis:alpine
          ports:
            - containerPort: 6379
