kubernetes/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crispy-octo-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crispy-octo-worker
  template:
    metadata:
      labels:
        app: crispy-octo-worker
    spec:
      containers:
        - name: crispy-octo-worker
          image: cammmi/getting-started:latest
          command:
            ["bundle", "exec", "rake", "environment", "resque:work", "QUEUE=*"]
          volumeMounts:
            - name: app-volume
              mountPath: /app
      volumes:
        - name: app-volume
          hostPath:
            # à changer pour la prod
            path: D:\\M1-CTO-TechLead\\crispy-octo
