kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crispy-octo-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crispy-octo-worker
  template:
    metadata:
      labels:
        app: crispy-octo-worker
    spec:
      containers:
        - name: crispy-octo-worker
          image: crispy-octo-worker:latest
          imagePullPolicy: Always
          command: ["bundle", "exec", "rake", "environment", "resque:work", "QUEUE=*", "RAILS_ENV=development"]
