kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crispy-octo-app-service
spec:
  selector:
    app: crispy-octo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
