kubernetes/crispy-octo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crispy-octo-service
spec:
  selector:
    app: crispy-octo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
