kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruby-app
spec:
  selector:
    app: ruby-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
