kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crispy-octo-app
spec:
  selector:
    app: crispy-octo-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: crispy-octo-redis
spec:
  type: ExternalName
  externalName: 51.158.113.176
  ports:
    - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: crispy-octo-db
spec:
  type: ExternalName
  externalName: 51.15.215.88
  ports:
    - port: 3306
